# EvoSkill

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  calc_dol_cagr.py  download_prompts.py  extract_dol_outlays.py  opencode.json  pyproject.toml  test_changes.py  treasury-data-local-first-protocol.skill  verify_prompts.py
.claude/: program.yaml
.evoskill/: config.toml  task.md
.evoskill/reports/: run-2026-03-30-071729.md
.opencode/tools/: web_fetch.py  web_fetch.ts  web_search.ts  webfetch.ts  websearch.py  websearch.ts
docs/: agent-profiles.md  appworld2_architecture.md  architecture.md  evaluation.md  halo_analysis.md  harness.md  openhands_integration_requirements.md  sdk-support.md
examples/appworld2/: .gitignore  README.md  config.json
examples/officeqa/: .gitignore  README.md  demo.sh  setup.sh
notebooks/: cc_agent.ipynb  data_plot.ipynb  self_improve_better.ipynb  self_improve_loop.ipynb  test.ipynb  test_registry.ipynb
scripts/: analyze_failures.py  build_pro20_split.py  build_pro20_split_manual.py  debug_codex.py  eval_oneshot_unseen.py  eval_opus_34_fails_pdf_only.py  eval_opus_holdout_68_with_skill.py  eval_sonnet_94_pdf_only.py  llm_judge.py  load_dataset.py  run_eval.py  run_eval_comb.py  run_eval_dabstep.py  run_eval_livecodebench.py  run_eval_sealqa.py  run_loop.py  run_loop_comb.py  run_loop_pdf_only.py  run_loop_pdf_only_opus.py  run_loop_sealqa.py  run_osworld_baseline.py  run_osworld_loop.py  run_sealqa_opencode.py  run_skill_check.py  sbatch_eval.sh  sbatch_eval_comb.sh  sbatch_loop.sh  sbatch_loop_sealqa.sh  sbatch_sealqa.sh  sbatch_sealqa_oss120b.sh  sbatch_vllm.sh  sbatch_vllm_job.sh  validate_env.py
src/: __init__.py  harness.py  openhands_runtime.py  tracing.py
src/agent_profiles/: __init__.py  base.py  options_utils.py  sdk_config.py
src/api/: data_utils.py  eval_runner.py  evoskill.py  harbor_loader.py  task_registry.py
src/cache/: run_cache.py
src/cli/: config.py  main.py  report.py  shared.py
src/docker/: launcher.py
src/evaluation/: eval_full.py  evaluate.py  gdpval_scorer.py  harbor_scorer.py  officeqa_judge.py  sealqa_scorer.py
src/harness/: __init__.py  _opencode_executor.py  agent.py  model_aliases.py  options_utils.py  pause.py  provider_auth.py  sdk_config.py  utils.py
src/loop/: __init__.py  config.py  constraints.py  gepa_runner.py  helpers.py  reviewer.py  runner.py  trace_db.py
src/officeqa/: workspace.py
src/osworld/: __init__.py  config.py  data.py  env_pool.py  runner.py  types.py
src/registry/: __init__.py  manager.py  models.py  sdk_utils.py
src/remote/: __init__.py  base.py  daytona.py  sync.py
src/schemas/: __init__.py  agent.py  proposer.py  skill_evolver.py  skill_proposer.py  tool_generator.py
tests/: conftest.py  test_cache.py  test_cli_config.py  test_cli_startup.py  test_codex_skill_discovery.py  test_constraints.py  test_docker_launcher.py  test_feedback_descent.py  test_halo_agent.py  test_harbor.py  test_harness.py  test_loop.py  test_opencode_contract.py  test_opencode_runtime.py  test_opencode_skill_context.py  test_openhands_contract.py  test_openhands_runtime.py  test_program_manager.py  test_provider_auth.py  test_registry.py  test_remote_base.py  test_remote_cli.py  test_remote_config.py  test_remote_daytona.py  test_remote_sync.py  test_reward.py  test_run_evolution.py  test_schemas.py  test_scorer_llm_script.py  test_task_registry.py  test_trace_db.py
(+97 files in other folders)
