[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.16",
    "datasets>=4.4.1",
    "deepagents>=0.3.0",
    "dspy>=3.0.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.2",
    "langgraph>=1.0.4",
    "mlflow>=3.7.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
